--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ line-length = 79
 source = ["src", ".nox/*/site-packages"]
 
 [tool.coverage.report]
+exclude_lines = ["pragma: no cover", "...", "if TYPE_CHECKING"]
 show_missing = true
 
 [tool.coverage.run]
