--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ source = ["src", ".nox/*/site-packages"]
 [tool.coverage.report]
 # exclude_lines = ["pragma: no cover", "...", "if TYPE_CHECKING"]
 exclude_lines = ["pragma: no cover", "\\.\\.\\.", "if TYPE_CHECKING"]
+fail_under = 97
 show_missing = true
 
 [tool.coverage.run]
