Properly run doctests in src/

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,6 @@ test:
     - >-
       nox --forcecolor -s "test-${PY%%-*}($PKG_FORMAT)" --
       --junit-xml=report-${PY%%-*}-${PKG_FORMAT}.xml
-      tests
   artifacts:
     paths:
       - ".coverage"
@@ -67,6 +66,8 @@ test-coverage:
   artifacts:
     paths:
       - "htmlcov"
+    reports:
+      cobertura: 'coverage.xml'
 
 release-check:
   stage: pre-release
