--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,7 +67,9 @@ test-coverage:
     paths:
       - "htmlcov"
     reports:
-      cobertura: 'coverage.xml'
+      coverage_report:
+        coverage_format: 'cobertura'
+        path: 'coverage.xml'
 
 release-check:
   stage: pre-release
