--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v4.3.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -13,6 +13,11 @@ repos:
       - id: black
         name: black
         entry: black
+        language: system
+        types: [python]
+      - id: isort
+        name: isort
+        entry: isort
         language: system
         types: [python]
       - id: flake8
