--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ variables:
 default:
   image: python:3
   before_script:
-    - pip install nox
+    - pip install nox tomli
   cache:
     paths:
       - .cache/pip
