--- a/pyproject.toml
+++ b/pyproject.toml
@@ -114,6 +114,10 @@ exclude_lines = [
     "if TYPE_CHECKING",
 ]
 fail_under = 100
+omit = [
+    "src/typed_settings/onepassword.py",
+    "tests/test_onepassword.py",
+]
 show_missing = true
 
 [tool.coverage.run]
