--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ test = [
     "coverage[toml]>=5.3",
     "pytest-cov",
     "pytest>=7.2.0",
+    "rich-click>=1.6",
     "typing-extensions",
 ]
 dev = [  # Everything needed for development
