--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.4.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -15,14 +15,10 @@ repos:
         entry: black
         language: system
         types: [python]
-      - id: isort
-        name: isort
-        entry: isort
-        language: system
-        types: [python]
-      - id: flake8
-        name: flake8
-        entry: flake8
+      - id: ruff
+        name: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+        entry: ruff
         language: system
         types: [python]
       - id: mypy
