Add myst-parser to docs requirements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ all = [  # All features
 docs = [
     "typed-settings[all]",
     "furo",
+    "myst-parser",
     "sphinx",
     "sphinx-copybutton",
 ]
