--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,10 +59,10 @@ all = [  # All features
 ]
 docs = [
     "typed-settings[all]",
-    "furo",
-    "myst-parser",
-    "sphinx",
-    "sphinx-copybutton",
+    "furo>=2022.12.7",
+    "myst-parser>=1.0",
+    "sphinx>=6.1",
+    "sphinx-copybutton>=0.5.1",
 ]
 lint = [
     "typed-settings[all]",
