--- a/pyproject.toml
+++ b/pyproject.toml
@@ -181,19 +181,35 @@ select = [  # see: https://beta.ruff.rs/docs/rules/
     "W",  # pycodestyle warning
     "C90",  # mccabe
     "I",  # isort
+    "D",  # pydocstyle
     "S",  # bandit
     "B",  # bugbear
+    "C4",  # flake8-comprehensions
     "UP",  # pyupgrade
+    "RUF",  # Ruff-specific
 ]
 ignore = [
     "S101",  # assert needed in tests, useful in src for documenting invariants
+    # Docstyle is a bit too strict:
+    "D107",  # I never document __init__()
+    "D102",
+    "D200",  # Allow putting the """ in separate lines in one-line docstrings
+    "D205",  # Allow the first line spanning another line.
+    "D212",  # Allow putting the """ in separate lines in multi-line docstrings
 ]
 line-length = 88
 src = ["src", "tests"]
 target-version = "py38"
+
+[tool.ruff.per-file-ignores]
+"docs/examples/*" = ["D100", "D101", "D103", "D415"]
+"examples/*" = ["D101"]
+"tests/*" = ["RUF012"]
+"tests/test_cli_param_types.py" = ["D106"]
 
 [tool.ruff.isort]
 lines-after-imports = 2
 
 [tool.ruff.pydocstyle]
 convention = "google"
+ignore-decorators = ["typing.overload"]
