Add basic support for Pydantic
There might be some rough edges but it’s good enough to get started
and I’d like to see first if it’s going to be used.

See: #25

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,8 +58,11 @@ option-groups = [
 jinja = [
     "jinja2",
 ]
+pydantic = [
+    "pydantic>=2",
+]
 all = [  # All features
-    "typed-settings[attrs,cattrs,click,option-groups,jinja]",
+    "typed-settings[attrs,cattrs,click,option-groups,jinja,pydantic]",
 ]
 docs = [
     "typed-settings[all]",
