--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,10 +67,11 @@ all = [  # All features
 ]
 docs = [
     "typed-settings[all]",
-    "furo>=2022.12.7",
-    "myst-parser>=1.0",
-    "sphinx>=6.1",
-    "sphinx-copybutton>=0.5.1",
+    "furo>=2023.9",
+    "myst-parser>=2.0",
+    "sphinx>=7.2",
+    "sphinx-copybutton>=0.5.2",
+    "sphinx_inline_tabs>=2023.4.21",
 ]
 lint = [
     "typed-settings[all]",
