--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ variables:
 default:
   image: python:3
   before_script:
-    - pip install nox tomli
+    - pip install nox tomli uv
   cache:
     paths:
       - .cache/pip
