--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,5 +115,5 @@ release:
     TWINE_REPOSITORY_URL: "https://upload.pypi.org/legacy/"
     TWINE_NON_INTERACTIVE: "1"
   script:
-    - uv pip install twine
+    - pip install twine
     - twine upload dist/*
